2019-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/addsub.c,
	  support/regression/tests/ato.c,
	  support/regression/tests/bitfields.c,
	  support/regression/tests/bitwise.c,
	  support/regression/tests/bug-2621.c,
	  support/regression/tests/bug-2833.c,
	  support/regression/tests/bug1115321.c,
	  support/regression/tests/bug3410878.c,
	  support/regression/tests/bug3521024.c,
	  support/regression/tests/compare.c,
	  support/regression/tests/condopptr.c,
	  support/regression/tests/constantRange.c,
	  support/regression/tests/ctype.c,
	  support/regression/tests/funptrs.c,
	  support/regression/tests/gcc-torture-execute-20000603-1.c,
	  support/regression/tests/gcc-torture-execute-20000731-1.c,
	  support/regression/tests/gcc-torture-execute-20020201-1.c,
	  support/regression/tests/gcc-torture-execute-20020506-1.c,
	  support/regression/tests/gcc-torture-execute-20040409-2.c,
	  support/regression/tests/gcc-torture-execute-ashldi-1.c,
	  support/regression/tests/gcc-torture-execute-ashrdi-1.c,
	  support/regression/tests/gcc-torture-execute-divcmp-4.c,
	  support/regression/tests/gcc-torture-execute-divconst-3.c,
	  support/regression/tests/gcc-torture-execute-divmod-1.c,
	  support/regression/tests/gcc-torture-execute-lshrdi-1.c,
	  support/regression/tests/gcc-torture-execute-pr19606.c,
	  support/regression/tests/gcc-torture-execute-pr39339.c,
	  support/regression/tests/gcc-torture-execute-pr19606.c,
	  support/regression/tests/gcc-torture-execute-string-opt-5.c,
	  support/regression/tests/gcc-torture-execute-pr19606.c,
	  support/regression/tests/gcc-torture-execute-va-arg-10.c
	  support/regression/tests/gcc-torture-execute-pr19606.c,
	  support/regression/tests/gcc-torture-execute-va-arg-9.c,
	  support/regression/tests/gcc-torture-execute-pr19606.c,
	  support/regression/tests/logic.c,
	  support/regression/tests/gcc-torture-execute-pr19606.c,
	  support/regression/tests/malloc.c,